2006-08-25  Sven Neumann  <sven@gimp.org>

	* docs/gimp.1.in: updated the URL of the user manual.

2006-08-25  Sven Neumann  <sven@gimp.org>

	* configure.in: print the value of $datarootdir in the summary.

	* app/base/tile-swap.c (tile_swap_in_attempt): fixed error
	handling in this unused function.

2006-08-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-actions.c (file_actions_setup)
	(file_actions_last_opened_update): if there are too few images in
	the document history, use the action's name as label for the empty
	slots, to keep the translation of "" from showing up in the
	shortcut editor.

2006-08-24  Sven Neumann  <sven@gimp.org>

	* desktop/gimp.desktop.in.in (Categories): removed "Application"
	which is not any longer in the Desktop Menu spec.

2006-08-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icodialog.c
	* plug-ins/winicon/icosave.c: fixed handling of indexed images
	(bug #342883).

2006-08-24  Sven Neumann  <sven@gimp.org>

	* configure.in: add -Wdeclaration_after_statement to the CFLAGS if
	the compiler supports this flag.

	* docs/gimp.1.in: explain ${datarootdir}.

2006-08-24  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-preview.c
	(gimp_display_shell_draw_tri): just return if gdk_drawable_get_size()
	returns 0 for width or height (bug #340056).

2006-08-24  Sven Neumann  <sven@gimp.org>

	* INSTALL: mention that multi-processor support is on by default.

	* app/base/tile-cache.c: fixed compilation if multi-processor
	support is disabled (bug #352609).

2006-08-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/tools-enums.h
	* app/tools/gimptransformtool.[ch]: add support for handles at
	midpoints of edges.

	* app/tools/gimpscaletool.c: use midpoint handles for scaling
	with fixed width or height.  Fixes bug #344955.
	
2006-08-23  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbaseenums.[ch]: removed "(Fastest)" from "None"
	and added translation context (bug #343576).
